<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest02MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/server"

            android:textStyle="bold" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1">

            <EditText
                android:id="@+id/server_port_edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:hint="@string/port" />

            <Button
                android:id="@+id/connect_button"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/connect"

                />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/client"

            android:textStyle="bold" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3">

            <EditText
                android:id="@+id/address_edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:hint="@string/address" />

            <EditText
                android:id="@+id/client_port_edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:hint="@string/port" />

            <EditText
                android:id="@+id/city_edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:hint="@string/pokemon_name" />

            <Button
                android:id="@+id/get_weather_button"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/get_pokemon" />

            <TextView
                android:id="@+id/abilities"
                android:layout_width="200dp"
                android:layout_height="46dp"
                android:layout_row="2"
                android:layout_column="0"
                android:gravity="center"


                android:textStyle="bold" />
            <TextView
                android:id="@+id/powers"
                android:layout_width="200dp"
                android:layout_height="46dp"
                android:layout_row="2"
                android:layout_column="1"
                android:gravity="center"


                android:textStyle="bold" />



        </GridLayout>


        <ImageView
            android:id="@+id/text_weather_field"
            android:layout_width="match_parent"
            android:layout_height="118dp">


        </ImageView>

        <Button
            android:id="@+id/get_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_list" />

        <TextView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:gravity="center"


            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>